--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,4 +1,9 @@
-<html>
+{% extends 'base.html' %}
+
+{% block header_text %}Start a new To-Do{% endblock %}
+
+{% block form_action %}/lists/new{% endblock %}
+<!-- <html>
     <head>
         <title>To-Do lists</title>
     </head>
@@ -11,4 +16,4 @@
             {% csrf_token %}
         </form>
     </body>
-</html>
+</html> -->
